recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:8: error: '}' expected but 'case' found.
		case _ => {
                ^Sierpinski:22: error: expected start of definition
	override def run() {
                 ^Sierpinski:26: error: eof expected but '}' found.
}
^