recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
	levels match {
		case 0 => {
			for(i<-0 to 2) {
				avance(length)
				droite(120)
			}
		case _ => {
			gauche(45)
			crab(levels-1,length/Math.sqrt(2))
			droite(90)
			crab(levels-1,length/Math.sqrt(2))
		}
		 	
	}
}

}
